[package]
name = "const-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
const-config-macros = { path = "macros", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["serde_derive"] }

[features]
default = []
serde = ["dep:serde"]
chrono = ["dep:chrono"]
toml = ["const-config-macros/toml"]
json = ["const-config-macros/json"]
yaml = ["const-config-macros/yaml"]
ron = ["const-config-macros/ron"]
json5 = ["const-config-macros/json5"]
s-expr = ["const-config-macros/s-expr"]
hjson = ["const-config-macros/hjson"]
csv = ["const-config-macros/csv"]
cbor = ["const-config-macros/cbor"]
msgpack = ["const-config-macros/msgpack"]
pickle = ["const-config-macros/pickle"]
bson = ["const-config-macros/bson"]
flexbuffers = ["const-config-macros/flexbuffers"]

[workspace]
members = [
    "gen",
    "macros"
]
