[package]
name = "const-config-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
litrs = "0.4"
const-config-gen = { path = "../gen", default-features = false }

[features]
default = ["toml", "json", "yaml"]
toml = ["const-config-gen/toml"]
json = ["const-config-gen/json"]
yaml = ["const-config-gen/yaml"]
