[package]
name = "const-config-macros"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
version = "0.1.0"
description = "Proc macros for `const-config` crate"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
litrs = "0.4"
const-config-gen = { path = "../gen", default-features = false }

[features]
default = []
toml = ["const-config-gen/toml"]
json = ["const-config-gen/json"]
yaml = ["const-config-gen/yaml"]
ron = ["const-config-gen/ron"]
json5 = ["const-config-gen/json5"]
s-expr = ["const-config-gen/s-expr"]
hjson = ["const-config-gen/hjson"]
csv = ["const-config-gen/csv"]
cbor = ["const-config-gen/cbor"]
msgpack = ["const-config-gen/msgpack"]
pickle = ["const-config-gen/pickle"]
bson = ["const-config-gen/bson"]
flexbuffers = ["const-config-gen/flexbuffers"]
